--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap");
+
+.center-content {
+	@apply flex flex-col justify-center items-center;
+}
+
+.leading {
+	line-height: -2em;
+}
