bestsellers topics dropdown implemented. did not use redux for this

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@
 .animate__animated.animate__fadeInDown {
 	--animate-duration: 2s;
 }
+
+.shadowed {
+	filter: drop-shadow(0.05em 0.1rem 0.05rem rgb(0, 0, 0));
+}
